Драйвер базы данных. Получение данных из БД

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile 'com.thoughtworks.xstream:xstream:1.4.8'
     compile 'com.solidfire.code.gson:gson:2.6.2'
     compile 'ch.qos.logback:logback-classic:1.1.5'
+    compile 'mysql:mysql-connector-java:6.0.6'
 }
 
 task testGroups(type: Test) {
